feat: GitHub Pages Deployment Setup
- Füge GitHub Actions Workflow für automatisches Deployment hinzu
- Kopiere gebaute Assets ins Root für GitHub Pages
- Ersetze index.html durch Production Build (Phaser Bundle)
- Kommentiere dist/ aus .gitignore für GitHub Pages
- Backup ursprüngliche index.html als docs-index.html

Fixes: 'Failed to resolve module specifier phaser' Fehler

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Build outputs
-dist/
-build/
+# Build outputs (commented out for GitHub Pages deployment)
+# dist/
+# build/
 out/
 
 # Development
